fix some bugs don't find the pictures

--- a/CodeInjectAssiant/CodeInjectAssiant.vcproj
+++ b/CodeInjectAssiant/CodeInjectAssiant.vcproj
@@ -302,7 +302,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\Refrence_code\eye.cur"
+				RelativePath=".\res\eye.cur"
 				>
 			</File>
 			<File
