--- a/CodeInjectAssiant/CodeInjectAssiant.vcproj
+++ b/CodeInjectAssiant/CodeInjectAssiant.vcproj
@@ -291,11 +291,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\res\drag.ico"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Refrence_code\drag.ico"
 				>
 			</File>
 			<File
-				RelativePath=".\res\drag.ico"
+				RelativePath=".\res\drag2.ico"
 				>
 			</File>
 			<File
@@ -308,6 +312,14 @@
 			</File>
 			<File
 				RelativePath="..\..\Refrence_code\eye.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\res\eye.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\res\list.ico"
 				>
 			</File>
 			<File
