整理了部分的代码，主窗口的空间名称全部提取到字符串表中

--- a/CodeInjectAssiant/CodeInjectAssiant.rc
+++ b/CodeInjectAssiant/CodeInjectAssiant.rc
@@ -107,16 +107,16 @@ BEGIN
     EDITTEXT        IDC_EDITOR,1,63,382,201,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     ICON            IDI_DRAG1,IDC_ST_DRAG,37,4,20,20,SS_NOTIFY
     EDITTEXT        IDC_ET_PROCINFO,62,7,170,13,ES_AUTOHSCROLL
-    PUSHBUTTON      "创建并写入数据",IDC_BT_INJECT,294,5,68,14
+    PUSHBUTTON      "IDC_BT_INJECT",IDC_BT_INJECT,294,5,68,14
     EDITTEXT        IDC_ET_ADDRESS,295,20,66,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "PID",IDC_STATIC,235,9,12,8
     EDITTEXT        IDC_ET_PROCID,248,7,30,13,ES_AUTOHSCROLL
     EDITTEXT        IDC_ET_LOG,1,265,383,66,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "执行",IDC_BT_EXECUTE,295,34,68,14
+    PUSHBUTTON      "IDC_BT_EXECUTE",IDC_BT_EXECUTE,295,34,68,14
     EDITTEXT        IDC_EDITOR_HEX,1,63,382,201,ES_MULTILINE | ES_WANTRETURN | WS_VSCROLL
     EDITTEXT        IDC_ET_HEXSIZE,113,50,40,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "bytes",IDC_STATIC,154,52,18,8
-    PUSHBUTTON      "空白数据",IDC_BT_BLANKHEX,62,49,50,13
+    PUSHBUTTON      "IDC_BT_BLANKHEX",IDC_BT_BLANKHEX,62,49,50,13
 END
 
 IDD_DLG_PROCLIST DIALOGEX 0, 0, 187, 303
@@ -245,6 +245,9 @@ BEGIN
                             "CreateRemoteThread:Success ThreadHandle:0x%0x"
     IDS_OPFNAME_DLL         "打开注入的Dll"
     IDS_OPFNAME_BIN         "打开注入的Bin"
+    IDS_BT_INJECTPROC       "创建并注入进程"
+    IDS_BT_EXECUTE          "执行代码"
+    IDS_BT_BLANKHEX         "空白数据"
 END
 
 #endif    // Chinese (P.R.C.) resources
