调整了窗口布局，分布操作，有助于在启动调试器调试进程

--- a/CodeInjectAssiant/CodeInjectAssiant.rc
+++ b/CodeInjectAssiant/CodeInjectAssiant.rc
@@ -92,31 +92,32 @@ BEGIN
     DEFPUSHBUTTON   "确定",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_CODEINJECTASSIANT_DIALOG DIALOGEX 0, 0, 385, 332
+IDD_CODEINJECTASSIANT_DIALOG DIALOGEX 0, 0, 386, 332
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "CodeInjectAssiant"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDI_PROCLIST,IDC_ST_PROCLIST,13,4,20,20,SS_NOTIFY
-    GROUPBOX        "",IDC_STATIC,0,51,385,278
-    CONTROL         "Hex",IDC_CK_HEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,50,28,10
-    CONTROL         "InjectDll",IDC_CK_DLL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,36,41,10
-    EDITTEXT        IDC_ET_FILEPATH,62,34,204,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "...",IDC_BT_SELECTFILE,266,34,13,14
-    EDITTEXT        IDC_EDITOR,1,63,382,201,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+    GROUPBOX        "",IDC_STATIC,0,45,386,284
+    CONTROL         "Hex",IDC_CK_HEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,45,28,10
+    CONTROL         "InjectDll",IDC_CK_DLL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,29,41,10
+    EDITTEXT        IDC_ET_FILEPATH,62,27,266,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "...",IDC_BT_SELECTFILE,329,27,13,14
+    EDITTEXT        IDC_EDITOR,1,57,384,206,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     ICON            IDI_DRAG1,IDC_ST_DRAG,37,4,20,20,SS_NOTIFY
-    EDITTEXT        IDC_ET_PROCINFO,62,7,170,13,ES_AUTOHSCROLL
-    PUSHBUTTON      "IDC_BT_INJECT",IDC_BT_INJECT,294,5,68,14
-    EDITTEXT        IDC_ET_ADDRESS,295,20,66,14,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "PID",IDC_STATIC,235,9,12,8
-    EDITTEXT        IDC_ET_PROCID,248,7,30,13,ES_AUTOHSCROLL
-    EDITTEXT        IDC_ET_LOG,1,265,383,66,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "IDC_BT_EXECUTE",IDC_BT_EXECUTE,295,34,68,14
-    EDITTEXT        IDC_EDITOR_HEX,1,63,382,201,ES_MULTILINE | ES_WANTRETURN | WS_VSCROLL
-    EDITTEXT        IDC_ET_HEXSIZE,113,50,40,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "bytes",IDC_STATIC,154,52,18,8
-    PUSHBUTTON      "IDC_BT_BLANKHEX",IDC_BT_BLANKHEX,62,49,50,13
+    EDITTEXT        IDC_ET_PROCINFO,62,7,233,13,ES_AUTOHSCROLL
+    PUSHBUTTON      "IDC_BT_ALLOCMEM",IDC_BT_ALLOCMEM,0,265,68,14
+    EDITTEXT        IDC_ET_ADDRESS,69,265,66,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "PID",IDC_STATIC,298,9,12,8
+    EDITTEXT        IDC_ET_PROCID,311,7,30,13,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ET_LOG,1,280,384,51,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | ES_WANTRETURN | WS_VSCROLL
+    PUSHBUTTON      "IDC_BT_EXECUTE",IDC_BT_EXECUTE,205,265,68,14
+    EDITTEXT        IDC_EDITOR_HEX,1,57,384,207,ES_MULTILINE | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_ET_HEXSIZE,113,44,40,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "bytes",IDC_STATIC,154,45,18,8
+    PUSHBUTTON      "IDC_BT_BLANKHEX",IDC_BT_BLANKHEX,62,43,50,13
+    PUSHBUTTON      "IDC_BT_WRITEMEM",IDC_BT_WRITEMEM,137,265,68,14
 END
 
 IDD_DLG_PROCLIST DIALOGEX 0, 0, 187, 303
@@ -245,9 +246,14 @@ BEGIN
                             "CreateRemoteThread:Success ThreadHandle:0x%0x"
     IDS_OPFNAME_DLL         "打开注入的Dll"
     IDS_OPFNAME_BIN         "打开注入的Bin"
-    IDS_BT_INJECTPROC       "创建并注入进程"
+    IDS_BT_ALLOCMEM         "分配内存空间"
+    IDS_BT_WRITEMEM         "写入Shellcode"
     IDS_BT_EXECUTE          "执行代码"
     IDS_BT_BLANKHEX         "空白数据"
+    IDS_TIP_ALLOCMEMSUCCESS "分配空间成功"
+    IDS_TIP_ALLOCMEMFAILD   "分配空间失败"
+    IDS_TIP_READREMOTEPROC  "读取进程错误或进程为X64程序"
+    IDS_TIP_X64IGNORE       "不能操作X64程序"
 END
 
 #endif    // Chinese (P.R.C.) resources
