标记:增加一个进程入口点注入

--- a/CodeInjectAssiant/CodeInjectAssiant.rc
+++ b/CodeInjectAssiant/CodeInjectAssiant.rc
@@ -96,6 +96,7 @@ IDD_CODEINJECTASSIANT_DIALOG DIALOGEX 0, 0, 386, 332
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "CodeInjectAssiant"
+MENU IDR_MAINMENU
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDI_PROCLIST,IDC_ST_PROCLIST,13,4,20,20,SS_NOTIFY
@@ -216,6 +217,17 @@ BEGIN
     BEGIN
         MENUITEM "刷新",                          ID_PROCLIST_REFRESH
     END
+END
+
+IDR_MAINMENU MENU 
+BEGIN
+    POPUP "操作(&O)"
+    BEGIN
+        MENUITEM "远程线程注入",                      ID_MENU_REMOTETHREADINJECT
+        MENUITEM SEPARATOR
+        MENUITEM "入口点注入",                       ID_MENU_ENTRYINJECT
+    END
+    MENUITEM "关于(&A)",                      0
 END
 
 
